framec_tests/language_specific/cpp/v3_mir/positive/forward_with_parent_mixed.frm
@target cpp

system S {
    machine:
        $P {
        }
        $A => $P {
            e() {
                => $^
            }
        }
        $B {
        }
}

