framec_tests/language_specific/cpp/v3_mir/negative/trailing_tokens.frm
@target cpp

system S {
    machine:
        $A {
            e() {
                -> $B() extra
            }
        }
}

